Seeder/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    QUOTE
    BACKSLASH

Grammar

Rule 0     S' -> dsl
Rule 1     dsl -> tableBlock moreBlocks
Rule 2     moreBlocks -> moreBlocks tableBlock
Rule 3     moreBlocks -> empty
Rule 4     tableBlock -> tableHeader attributeBlock moreAttributes
Rule 5     moreAttributes -> moreAttributes attributeBlock
Rule 6     moreAttributes -> empty
Rule 7     tableHeader -> TABLE COLON IDENTIFIER LPAREN NUMBER RPAREN endline
Rule 8     tableHeader -> TABLE COLON IDENTIFIER LPAREN FILLED RPAREN endline
Rule 9     attributeBlock -> attributeName dataType fillMethod
Rule 10    attributeBlock -> attributeName dataType fillMethod constraintPart
Rule 11    attributeName -> DOUBLE_COLON IDENTIFIER endline
Rule 12    dataType -> TYPE dtypes moreDimensions endline
Rule 13    dtypes -> TYPE_NOPARAM
Rule 14    dtypes -> TYPE_1PARAM LPAREN NUMBER RPAREN
Rule 15    dtypes -> TYPE_2PARAM LPAREN NUMBER COMMA NUMBER RPAREN
Rule 16    dtypes -> TYPE_2PARAM_TIME LPAREN NUMBER COMMA TIMEZONE_PARAM RPAREN
Rule 17    moreDimensions -> moreDimensions oneDimension
Rule 18    moreDimensions -> empty
Rule 19    oneDimension -> LBRACKET NUMBER RBRACKET
Rule 20    fillMethod -> FILL FILL_METHOD_NOPARAM LPAREN RPAREN endline
Rule 21    fillMethod -> FILL FILL_METHOD_1PARAM LPAREN parameter RPAREN endline
Rule 22    constraintPart -> CONSTRAINT constr moreConstr endline
Rule 23    moreConstr -> constr moreConstr
Rule 24    moreConstr -> empty
Rule 25    constr -> CONSTR_NOPARAM
Rule 26    constr -> CONSTR_1PARAM LPAREN NUMBER RPAREN
Rule 27    parameters -> parameters parameter
Rule 28    parameters -> empty
Rule 29    parameter -> PATH
Rule 30    parameter -> REGEX
Rule 31    parameter -> NUMBER
Rule 32    parameter -> IDENTIFIER
Rule 33    parameter -> IDENTIFIER COLON IDENTIFIER
Rule 34    endline -> EOL extraEndline
Rule 35    extraEndline -> EOL extraEndline
Rule 36    extraEndline -> empty
Rule 37    empty -> <empty>

Terminals, with rules where they appear

BACKSLASH            : 
COLON                : 7 8 33
COMMA                : 15 16
CONSTRAINT           : 22
CONSTR_1PARAM        : 26
CONSTR_NOPARAM       : 25
DOUBLE_COLON         : 11
EOL                  : 34 35
FILL                 : 20 21
FILLED               : 8
FILL_METHOD_1PARAM   : 21
FILL_METHOD_NOPARAM  : 20
IDENTIFIER           : 7 8 11 32 33 33
LBRACKET             : 19
LPAREN               : 7 8 14 15 16 20 21 26
NUMBER               : 7 14 15 15 16 19 26 31
PATH                 : 29
QUOTE                : 
RBRACKET             : 19
REGEX                : 30
RPAREN               : 7 8 14 15 16 20 21 26
TABLE                : 7 8
TIMEZONE_PARAM       : 16
TYPE                 : 12
TYPE_1PARAM          : 14
TYPE_2PARAM          : 15
TYPE_2PARAM_TIME     : 16
TYPE_NOPARAM         : 13
error                : 

Nonterminals, with rules where they appear

attributeBlock       : 4 5
attributeName        : 9 10
constr               : 22 23
constraintPart       : 10
dataType             : 9 10
dsl                  : 0
dtypes               : 12
empty                : 3 6 18 24 28 36
endline              : 7 8 11 12 20 21 22
extraEndline         : 34 35
fillMethod           : 9 10
moreAttributes       : 4 5
moreBlocks           : 1 2
moreConstr           : 22 23
moreDimensions       : 12 17
oneDimension         : 17
parameter            : 21 27
parameters           : 27
tableBlock           : 1 2
tableHeader          : 4

Parsing method: LALR

state 0

    (0) S' -> . dsl
    (1) dsl -> . tableBlock moreBlocks
    (4) tableBlock -> . tableHeader attributeBlock moreAttributes
    (7) tableHeader -> . TABLE COLON IDENTIFIER LPAREN NUMBER RPAREN endline
    (8) tableHeader -> . TABLE COLON IDENTIFIER LPAREN FILLED RPAREN endline

    TABLE           shift and go to state 4

    tableHeader                    shift and go to state 1
    tableBlock                     shift and go to state 2
    dsl                            shift and go to state 3

state 1

    (4) tableBlock -> tableHeader . attributeBlock moreAttributes
    (9) attributeBlock -> . attributeName dataType fillMethod
    (10) attributeBlock -> . attributeName dataType fillMethod constraintPart
    (11) attributeName -> . DOUBLE_COLON IDENTIFIER endline

    DOUBLE_COLON    shift and go to state 6

    attributeName                  shift and go to state 5
    attributeBlock                 shift and go to state 7

state 2

    (1) dsl -> tableBlock . moreBlocks
    (2) moreBlocks -> . moreBlocks tableBlock
    (3) moreBlocks -> . empty
    (37) empty -> .

    TABLE           reduce using rule 37 (empty -> .)
    $end            reduce using rule 37 (empty -> .)

    empty                          shift and go to state 8
    moreBlocks                     shift and go to state 9

state 3

    (0) S' -> dsl .



state 4

    (7) tableHeader -> TABLE . COLON IDENTIFIER LPAREN NUMBER RPAREN endline
    (8) tableHeader -> TABLE . COLON IDENTIFIER LPAREN FILLED RPAREN endline

    COLON           shift and go to state 10


state 5

    (9) attributeBlock -> attributeName . dataType fillMethod
    (10) attributeBlock -> attributeName . dataType fillMethod constraintPart
    (12) dataType -> . TYPE dtypes moreDimensions endline

    TYPE            shift and go to state 12

    dataType                       shift and go to state 11

state 6

    (11) attributeName -> DOUBLE_COLON . IDENTIFIER endline

    IDENTIFIER      shift and go to state 13


state 7

    (4) tableBlock -> tableHeader attributeBlock . moreAttributes
    (5) moreAttributes -> . moreAttributes attributeBlock
    (6) moreAttributes -> . empty
    (37) empty -> .

    DOUBLE_COLON    reduce using rule 37 (empty -> .)
    TABLE           reduce using rule 37 (empty -> .)
    $end            reduce using rule 37 (empty -> .)

    empty                          shift and go to state 14
    moreAttributes                 shift and go to state 15

state 8

    (3) moreBlocks -> empty .

    TABLE           reduce using rule 3 (moreBlocks -> empty .)
    $end            reduce using rule 3 (moreBlocks -> empty .)


state 9

    (1) dsl -> tableBlock moreBlocks .
    (2) moreBlocks -> moreBlocks . tableBlock
    (4) tableBlock -> . tableHeader attributeBlock moreAttributes
    (7) tableHeader -> . TABLE COLON IDENTIFIER LPAREN NUMBER RPAREN endline
    (8) tableHeader -> . TABLE COLON IDENTIFIER LPAREN FILLED RPAREN endline

    $end            reduce using rule 1 (dsl -> tableBlock moreBlocks .)
    TABLE           shift and go to state 4

    tableHeader                    shift and go to state 1
    tableBlock                     shift and go to state 16

state 10

    (7) tableHeader -> TABLE COLON . IDENTIFIER LPAREN NUMBER RPAREN endline
    (8) tableHeader -> TABLE COLON . IDENTIFIER LPAREN FILLED RPAREN endline

    IDENTIFIER      shift and go to state 17


state 11

    (9) attributeBlock -> attributeName dataType . fillMethod
    (10) attributeBlock -> attributeName dataType . fillMethod constraintPart
    (20) fillMethod -> . FILL FILL_METHOD_NOPARAM LPAREN RPAREN endline
    (21) fillMethod -> . FILL FILL_METHOD_1PARAM LPAREN parameter RPAREN endline

    FILL            shift and go to state 19

    fillMethod                     shift and go to state 18

state 12

    (12) dataType -> TYPE . dtypes moreDimensions endline
    (13) dtypes -> . TYPE_NOPARAM
    (14) dtypes -> . TYPE_1PARAM LPAREN NUMBER RPAREN
    (15) dtypes -> . TYPE_2PARAM LPAREN NUMBER COMMA NUMBER RPAREN
    (16) dtypes -> . TYPE_2PARAM_TIME LPAREN NUMBER COMMA TIMEZONE_PARAM RPAREN

    TYPE_NOPARAM    shift and go to state 24
    TYPE_1PARAM     shift and go to state 21
    TYPE_2PARAM     shift and go to state 22
    TYPE_2PARAM_TIME shift and go to state 20

    dtypes                         shift and go to state 23

state 13

    (11) attributeName -> DOUBLE_COLON IDENTIFIER . endline
    (34) endline -> . EOL extraEndline

    EOL             shift and go to state 26

    endline                        shift and go to state 25

state 14

    (6) moreAttributes -> empty .

    DOUBLE_COLON    reduce using rule 6 (moreAttributes -> empty .)
    TABLE           reduce using rule 6 (moreAttributes -> empty .)
    $end            reduce using rule 6 (moreAttributes -> empty .)


state 15

    (4) tableBlock -> tableHeader attributeBlock moreAttributes .
    (5) moreAttributes -> moreAttributes . attributeBlock
    (9) attributeBlock -> . attributeName dataType fillMethod
    (10) attributeBlock -> . attributeName dataType fillMethod constraintPart
    (11) attributeName -> . DOUBLE_COLON IDENTIFIER endline

    TABLE           reduce using rule 4 (tableBlock -> tableHeader attributeBlock moreAttributes .)
    $end            reduce using rule 4 (tableBlock -> tableHeader attributeBlock moreAttributes .)
    DOUBLE_COLON    shift and go to state 6

    attributeName                  shift and go to state 5
    attributeBlock                 shift and go to state 27

state 16

    (2) moreBlocks -> moreBlocks tableBlock .

    TABLE           reduce using rule 2 (moreBlocks -> moreBlocks tableBlock .)
    $end            reduce using rule 2 (moreBlocks -> moreBlocks tableBlock .)


state 17

    (7) tableHeader -> TABLE COLON IDENTIFIER . LPAREN NUMBER RPAREN endline
    (8) tableHeader -> TABLE COLON IDENTIFIER . LPAREN FILLED RPAREN endline

    LPAREN          shift and go to state 28


state 18

    (9) attributeBlock -> attributeName dataType fillMethod .
    (10) attributeBlock -> attributeName dataType fillMethod . constraintPart
    (22) constraintPart -> . CONSTRAINT constr moreConstr endline

    DOUBLE_COLON    reduce using rule 9 (attributeBlock -> attributeName dataType fillMethod .)
    TABLE           reduce using rule 9 (attributeBlock -> attributeName dataType fillMethod .)
    $end            reduce using rule 9 (attributeBlock -> attributeName dataType fillMethod .)
    CONSTRAINT      shift and go to state 30

    constraintPart                 shift and go to state 29

state 19

    (20) fillMethod -> FILL . FILL_METHOD_NOPARAM LPAREN RPAREN endline
    (21) fillMethod -> FILL . FILL_METHOD_1PARAM LPAREN parameter RPAREN endline

    FILL_METHOD_NOPARAM shift and go to state 32
    FILL_METHOD_1PARAM shift and go to state 31


state 20

    (16) dtypes -> TYPE_2PARAM_TIME . LPAREN NUMBER COMMA TIMEZONE_PARAM RPAREN

    LPAREN          shift and go to state 33


state 21

    (14) dtypes -> TYPE_1PARAM . LPAREN NUMBER RPAREN

    LPAREN          shift and go to state 34


state 22

    (15) dtypes -> TYPE_2PARAM . LPAREN NUMBER COMMA NUMBER RPAREN

    LPAREN          shift and go to state 35


state 23

    (12) dataType -> TYPE dtypes . moreDimensions endline
    (17) moreDimensions -> . moreDimensions oneDimension
    (18) moreDimensions -> . empty
    (37) empty -> .

    EOL             reduce using rule 37 (empty -> .)
    LBRACKET        reduce using rule 37 (empty -> .)

    moreDimensions                 shift and go to state 36
    empty                          shift and go to state 37

state 24

    (13) dtypes -> TYPE_NOPARAM .

    EOL             reduce using rule 13 (dtypes -> TYPE_NOPARAM .)
    LBRACKET        reduce using rule 13 (dtypes -> TYPE_NOPARAM .)


state 25

    (11) attributeName -> DOUBLE_COLON IDENTIFIER endline .

    TYPE            reduce using rule 11 (attributeName -> DOUBLE_COLON IDENTIFIER endline .)


state 26

    (34) endline -> EOL . extraEndline
    (35) extraEndline -> . EOL extraEndline
    (36) extraEndline -> . empty
    (37) empty -> .

    EOL             shift and go to state 40
    TYPE            reduce using rule 37 (empty -> .)
    FILL            reduce using rule 37 (empty -> .)
    DOUBLE_COLON    reduce using rule 37 (empty -> .)
    TABLE           reduce using rule 37 (empty -> .)
    $end            reduce using rule 37 (empty -> .)
    CONSTRAINT      reduce using rule 37 (empty -> .)

    empty                          shift and go to state 39
    extraEndline                   shift and go to state 38

state 27

    (5) moreAttributes -> moreAttributes attributeBlock .

    DOUBLE_COLON    reduce using rule 5 (moreAttributes -> moreAttributes attributeBlock .)
    TABLE           reduce using rule 5 (moreAttributes -> moreAttributes attributeBlock .)
    $end            reduce using rule 5 (moreAttributes -> moreAttributes attributeBlock .)


state 28

    (7) tableHeader -> TABLE COLON IDENTIFIER LPAREN . NUMBER RPAREN endline
    (8) tableHeader -> TABLE COLON IDENTIFIER LPAREN . FILLED RPAREN endline

    NUMBER          shift and go to state 41
    FILLED          shift and go to state 42


state 29

    (10) attributeBlock -> attributeName dataType fillMethod constraintPart .

    DOUBLE_COLON    reduce using rule 10 (attributeBlock -> attributeName dataType fillMethod constraintPart .)
    TABLE           reduce using rule 10 (attributeBlock -> attributeName dataType fillMethod constraintPart .)
    $end            reduce using rule 10 (attributeBlock -> attributeName dataType fillMethod constraintPart .)


state 30

    (22) constraintPart -> CONSTRAINT . constr moreConstr endline
    (25) constr -> . CONSTR_NOPARAM
    (26) constr -> . CONSTR_1PARAM LPAREN NUMBER RPAREN

    CONSTR_NOPARAM  shift and go to state 45
    CONSTR_1PARAM   shift and go to state 43

    constr                         shift and go to state 44

state 31

    (21) fillMethod -> FILL FILL_METHOD_1PARAM . LPAREN parameter RPAREN endline

    LPAREN          shift and go to state 46


state 32

    (20) fillMethod -> FILL FILL_METHOD_NOPARAM . LPAREN RPAREN endline

    LPAREN          shift and go to state 47


state 33

    (16) dtypes -> TYPE_2PARAM_TIME LPAREN . NUMBER COMMA TIMEZONE_PARAM RPAREN

    NUMBER          shift and go to state 48


state 34

    (14) dtypes -> TYPE_1PARAM LPAREN . NUMBER RPAREN

    NUMBER          shift and go to state 49


state 35

    (15) dtypes -> TYPE_2PARAM LPAREN . NUMBER COMMA NUMBER RPAREN

    NUMBER          shift and go to state 50


state 36

    (12) dataType -> TYPE dtypes moreDimensions . endline
    (17) moreDimensions -> moreDimensions . oneDimension
    (34) endline -> . EOL extraEndline
    (19) oneDimension -> . LBRACKET NUMBER RBRACKET

    EOL             shift and go to state 26
    LBRACKET        shift and go to state 52

    oneDimension                   shift and go to state 51
    endline                        shift and go to state 53

state 37

    (18) moreDimensions -> empty .

    EOL             reduce using rule 18 (moreDimensions -> empty .)
    LBRACKET        reduce using rule 18 (moreDimensions -> empty .)


state 38

    (34) endline -> EOL extraEndline .

    DOUBLE_COLON    reduce using rule 34 (endline -> EOL extraEndline .)
    TABLE           reduce using rule 34 (endline -> EOL extraEndline .)
    $end            reduce using rule 34 (endline -> EOL extraEndline .)
    CONSTRAINT      reduce using rule 34 (endline -> EOL extraEndline .)
    TYPE            reduce using rule 34 (endline -> EOL extraEndline .)
    FILL            reduce using rule 34 (endline -> EOL extraEndline .)


state 39

    (36) extraEndline -> empty .

    TYPE            reduce using rule 36 (extraEndline -> empty .)
    FILL            reduce using rule 36 (extraEndline -> empty .)
    DOUBLE_COLON    reduce using rule 36 (extraEndline -> empty .)
    TABLE           reduce using rule 36 (extraEndline -> empty .)
    $end            reduce using rule 36 (extraEndline -> empty .)
    CONSTRAINT      reduce using rule 36 (extraEndline -> empty .)


state 40

    (35) extraEndline -> EOL . extraEndline
    (35) extraEndline -> . EOL extraEndline
    (36) extraEndline -> . empty
    (37) empty -> .

    EOL             shift and go to state 40
    TYPE            reduce using rule 37 (empty -> .)
    FILL            reduce using rule 37 (empty -> .)
    DOUBLE_COLON    reduce using rule 37 (empty -> .)
    TABLE           reduce using rule 37 (empty -> .)
    $end            reduce using rule 37 (empty -> .)
    CONSTRAINT      reduce using rule 37 (empty -> .)

    empty                          shift and go to state 39
    extraEndline                   shift and go to state 54

state 41

    (7) tableHeader -> TABLE COLON IDENTIFIER LPAREN NUMBER . RPAREN endline

    RPAREN          shift and go to state 55


state 42

    (8) tableHeader -> TABLE COLON IDENTIFIER LPAREN FILLED . RPAREN endline

    RPAREN          shift and go to state 56


state 43

    (26) constr -> CONSTR_1PARAM . LPAREN NUMBER RPAREN

    LPAREN          shift and go to state 57


state 44

    (22) constraintPart -> CONSTRAINT constr . moreConstr endline
    (23) moreConstr -> . constr moreConstr
    (24) moreConstr -> . empty
    (25) constr -> . CONSTR_NOPARAM
    (26) constr -> . CONSTR_1PARAM LPAREN NUMBER RPAREN
    (37) empty -> .

    CONSTR_NOPARAM  shift and go to state 45
    CONSTR_1PARAM   shift and go to state 43
    EOL             reduce using rule 37 (empty -> .)
